<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/fragmentAddFeedback"
  android:background="@color/white"
  android:orientation="vertical"
  tools:context="com.singularity.trackmyvehicle.view.fragment.FeedbackFormFragment">

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
      android:id="@+id/screenIntroduction"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/banner"
        android:paddingTop="32dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
          style="@style/DefaultLabelStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/label_feedback"/>

        <TextView
          android:id="@+id/btnFeedback"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:background="?attr/selectableItemBackground"
          android:text="@string/label_select_feedback"
          android:textColor="@color/colorTextPrimary"
          android:textSize="24sp"
          tools:text="@string/label_select_feedback"/>

        <View
          android:id="@+id/expenseHeaderSeparator"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginBottom="16dp"
          android:background="#d2d2d2"/>

        <TextView
          style="@style/DefaultLabelStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/label_other_details"/>

        <EditText
          android:id="@+id/edtDetails"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:gravity="top"
          android:minLines="4"
          android:textColor="@color/colorTextPrimary"
          android:textSize="20sp"
          tools:text="For Gas"/>

        <TextView
            android:id="@+id/labelVehicle"
            style="@style/DefaultLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_vehicle" />

        <TextView
            android:id="@+id/btnSelectVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/label_select_vehicle"
            android:textColor="@color/colorTextPrimary"
            android:textSize="24sp"
            tools:text="@string/label_select_vehicle" />


        <Button
          android:id="@+id/btnProceed"
          style="@style/ButtonRoundedPrimary"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_gravity="center_horizontal"
          android:drawableEnd="@drawable/ic_chevron_right_wapper"
          android:drawableRight="@drawable/ic_chevron_right_wapper"
          android:text="@string/action_send_feedback"
          android:textSize="18sp"/>
      </LinearLayout>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        android:text="@string/label_add_feedback"
        android:visibility="gone"/>
    </RelativeLayout>
  </ScrollView>
</LinearLayout>
