<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <View
        android:id="@+id/view_rowTitle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_serialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sl"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_TerminalAssignmentCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bstid"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start"
            android:paddingStart="4dp"
            android:layout_weight="2"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_CarrierRegistrationNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/vrn"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="start"
            android:paddingStart="8dp"
            android:layout_weight="3"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_TotalAlerts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_alerts"
            android:gravity="end"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_weight="3"/>


    </LinearLayout>

</RelativeLayout>