<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_margin="@dimen/small"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="9"
            android:layout_height="wrap_content">

            <TextView
                tools:text="@string/from"
                android:id="@+id/txtFrom"
                android:textSize="18sp"
                android:paddingTop="@dimen/small"
                android:paddingBottom="@dimen/small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <TextView
                tools:text="@string/to"
                android:id="@+id/txtTo"
                android:textSize="18sp"
                android:paddingTop="@dimen/small"
                android:paddingBottom="@dimen/small"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"/>

            <TextView
                tools:text="@string/distance"
                android:id="@+id/txtDistance"
                android:textSize="18sp"
                android:paddingTop="@dimen/small"
                android:paddingBottom="@dimen/small"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="3"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>