<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_navigation_drawer"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.singularity.trackmyvehicle.view.activity.ForgetPasswordActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <androidx.cardview.widget.CardView
                android:id="@+id/containerResetPassword"
                style="@style/DefaultCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/DefaultLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_username" />

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions" />

                    <TextView
                        style="@style/DefaultLabelStyle"
                        android:layout_width="match_parent"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:text="@string/label_mobile_number" />

                    <EditText
                        android:id="@+id/etMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:hint="**********(OPTIONAL)"
                        android:inputType="phone" />

                    <Button
                        android:id="@+id/btnResetPassword"
                        style="@style/ButtonRoundedPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:text="@string/label_reset_password" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/containerOtpValidate"
                style="@style/DefaultCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">


                    <TextView
                        style="@style/DefaultLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_otp" />

                    <EditText
                        android:id="@+id/etOtp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textNoSuggestions" />

                    <Button
                        android:id="@+id/btnValidateOtp"
                        style="@style/ButtonRoundedPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:text="@string/label_validate_otp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/containerOtpValidateV3"
                style="@style/DefaultCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_margin="7dp"
                            android:id="@+id/text_otpResendTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/roboto_bold_0"
                            android:text="Time"
                            android:textColor="#075E54"
                            android:textSize="14dp" />

                        <TextView
                            android:id="@+id/text_otpResend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:padding="5dp"
                            android:paddingEnd="10dp"
                            android:visibility="gone"
                            android:layout_marginTop="10dp"
                            android:elevation="8dp"
                            android:text="@string/label_forget"
                            android:textSize="16sp"
                            android:layout_gravity="center_horizontal"
                            android:textStyle="bold|italic"
                            android:textAlignment="center"
                            android:textColor="#FF4500"
                            />
                    </RelativeLayout>

                    <TextView
                        style="@style/DefaultLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_otp" />

                    <EditText
                        android:id="@+id/etOtpV3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:inputType="textNoSuggestions" />

                    <TextView
                        style="@style/DefaultLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_new_password" />

                    <EditText
                        android:id="@+id/etNewPasswordV3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                    <TextView
                        style="@style/DefaultLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_confirm_password" />

                    <EditText
                        android:id="@+id/etConfirmPasswordV3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <Button
                        android:id="@+id/btnUpdatePasswordV3"
                        style="@style/ButtonRoundedPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:text="@string/action_set_password" />



                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/containerNewPassword"
                style="@style/DefaultCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/DefaultLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_new_password" />

                    <EditText
                        android:id="@+id/etNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                    <TextView
                        style="@style/DefaultLabelStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_confirm_password" />

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/btnUpdatePassword"
                        style="@style/ButtonRoundedPrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="12dp"
                        android:text="@string/action_set_password" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>
